@@ -108,6 +108,9 @@ bool NRPEServer::loadModuleEx(std::wstring alias, NSCAPI::moduleLoadMode mode) {
 
 			(_T("verify mode"), sh::string_key(&info_.ssl.verify_mode, "none"),
 			_T("VERIFY MODE"), _T(""), false)
+
+			(_T("encoding"), sh::string_key(&handler_->encoding_, ""),
+			_T("NRPE PAYLOAD ENCODING"), _T(""), true)
 			;
 
 		settings.register_all();
